# sksync

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  install.sh  justfile  lefthook.yml  package.json  sksync-lock.example.json  sksync.agents.example.json  sksync.bundle.example.json  sksync.config.example.json
.github/workflows/: linux-smoke.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  ISSUES.md  RELEASE.md  ROADMAP.md  RUST_TUI_PLAN.md
docs/adr/: 0001-bundles-as-install-sets.md
docs/superpowers/plans/: 2026-05-24-linux-distro-support.md  2026-05-26-bundle-export-implementation.md  2026-05-26-bundle-install-sets-implementation.md  2026-05-28-progress-phase-logs.md  (+2 more)
schemas/: sksync-lock.schema.json  sksync.agents.schema.json  sksync.bundle.schema.json  sksync.schema.json
site/: index.md  install.md  quickstart.md
site/.vitepress/: config.ts
site/guides/: agent-mappings.md  bundles.md  lockfile.md  project-config.md  sources.md
site/reference/: commands.md
src/: cli.rs  main.rs
src/application/: add.rs  apply.rs  bundle.rs  check.rs  config.rs  discovery.rs  init.rs  list.rs  mod.rs  outdated.rs  plan.rs  ports.rs  registry.rs  source.rs  update.rs
src/domain/: agent.rs  bundle.rs  link_plan.rs  lockfile.rs  mod.rs  removal.rs  scope.rs  skill.rs  skill_manifest.rs  source.rs  target.rs
src/infrastructure/: builtin_agents.rs  fs.rs  git.rs  hash.rs  install.rs  json.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
tests/: bundle_cli.rs  schema_files.rs
(+3 files in other folders)
