[package]
name = "sksync"
version = "0.1.0"
edition = "2021"
description = "Synchronize AI agent skill symlinks"
license = "MIT"
repository = "https://github.com/takemo101/sksync"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
hex = "0.4"
inquire = "0.7.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellexpand = "3"
thiserror = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
